istio-bookinfo-balance.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: reviews-gateway-external-lb
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-route
spec:
  hosts:
  - "*"
  gateways:
  - reviews-gateway-external-lb
  http:
  - name: "reviews-lb-routes"
    route:
    - destination:
        host: reviews
        port:
          number: 9080
