istio-split-httpbin-2S-rewrite.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name:  httpbin-route
spec:
  hosts:
  - "*"
  gateways:
  - httpbin-gateway-external
  http:
  - match:
    - uri:
        prefix: /httpbin
    rewrite:
      uri: "/"
    route:
    - destination:
        host:  httpbin-v1
        port:
          number: 14001
      weight: 10
    - destination:
        host:  httpbin-v2
        port:
          number: 14001
      weight: 90
